--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
   <head>
     <script>
-      function getRandomNumber(){
-      const RandomNumber = Math.floor(Math.random()*10)
-      const sRandomNumber = String(RandomNumber)
+      function getRandomNumber(samoeBolshoeChislo){
+      const RandomNumber = Math.floor(Math.random()*samoeBolshoeChislo)
+      return RandomNumber
+      }
+
+      const sRandomNumber = String(getRandomNumber(10))
       let userNumber = prompt('Угадайте число от 1 до 10:')
       if (userNumber === sRandomNumber){
         console.log('Вы угадали  число: ', sRandomNumber )
@@ -17,7 +20,7 @@
       /*else{
         console.log('Вы угадали  число: ', RandomNumber )
       }*/
-    }
+    
 
     getRandomNumber()
       
